damlo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: damlo-ingress
  namespace: damlo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: leaderboard.top
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
  - host: damlo.simmet.top
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
